lots of minor enhancements

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,12 +5,14 @@
         <meta name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
+        <title>KU Project Manager</title>
+
         <meta name="theme-color" content="#000000" />
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'></link>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"></link>
         <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"></link>
         <link href=" https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet"></link>
-   
+        <link rel="stylesheet" href="https://use.typekit.net/afy2jah.css">
     </head>
     <body>
         <noscript>
