--- a/assets/index.html
+++ b/assets/index.html
@@ -6,13 +6,17 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
         <title>KU Project Manager</title>
-
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <meta name="theme-color" content="#000000" />
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'></link>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"></link>
         <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"></link>
         <link href=" https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet"></link>
         <link rel="stylesheet" href="https://use.typekit.net/afy2jah.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <noscript>
