--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-        <title>KU Project Manager</title>
+        <title>KUPM</title>
         <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <meta name="theme-color" content="#000000" />
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'></link>
